Fixed issue with horizontal scrollbar displaying

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -43,6 +43,7 @@
 html {
   height: 100vh;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
@@ -51,7 +52,7 @@ body {
   font-size: 1rem;
   line-height: 1.7;
   height: 100%;
-  width: 100%;
+  width: 100vw;
 }
 
 section:nth-of-type(2n + 1) {
